--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^18.0.23",
         "@types/react-dom": "^18.0.7",
         "eslint-config-prettier": "^8.5.0",
+        "json-server": "^0.17.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.2",
@@ -25,7 +26,8 @@
         "test": "react-scripts test",
         "test:all": "react-scripts test --watchAll --coverage",
         "test:prod": "react-scripts test --watchAll --coverage --watchAll=false",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "server": "json-server --watch ./src/server/db.json"
     },
     "eslintConfig": {
         "extends": [
