--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^18.0.23",
         "@types/react-dom": "^18.0.7",
         "eslint-config-prettier": "^8.5.0",
+        "husky": "^8.0.1",
         "json-server": "^0.17.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -27,7 +28,9 @@
         "test:all": "react-scripts test --watchAll --coverage",
         "test:prod": "react-scripts test --watchAll --coverage --watchAll=false",
         "eject": "react-scripts eject",
-        "server": "json-server --watch ./src/server/db.json"
+        "server": "json-server --watch ./src/server/db.json",
+        "prepare": "husky install",
+        "scriptname": "cmd"
     },
     "eslintConfig": {
         "extends": [
